[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/candy.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/loop_espera.ogg" type="AudioStream" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 513.428, 354.253 )
scale = Vector2( 0.992187, 0.931395 )
texture = ExtResource( 2 )

[node name="candys" type="Node2D" parent="background"]

[node name="candy01" parent="background/candys" instance=ExtResource( 3 )]
position = Vector2( -419.115, -127.61 )

[node name="candy02" parent="background/candys" instance=ExtResource( 3 )]
position = Vector2( -405.463, 117.468 )

[node name="candy03" parent="background/candys" instance=ExtResource( 3 )]
position = Vector2( -288.528, -30.5996 )

[node name="candy04" parent="background/candys" instance=ExtResource( 3 )]
position = Vector2( -210.703, 116.064 )

[node name="candy05" parent="background/candys" instance=ExtResource( 3 )]
position = Vector2( -113.49, 13.9632 )

[node name="candy06" parent="background/candys" instance=ExtResource( 3 )]
position = Vector2( 35.8691, -19.3393 )

[node name="candy07" parent="background/candys" instance=ExtResource( 3 )]
position = Vector2( 98.4106, 130.165 )

[node name="candy08" parent="background/candys" instance=ExtResource( 3 )]
position = Vector2( 240.382, 30.4166 )

[node name="candy09" parent="background/candys" instance=ExtResource( 3 )]
position = Vector2( 293.224, -166.431 )

[node name="candy10" parent="background/candys" instance=ExtResource( 3 )]
position = Vector2( 412.654, -23.0928 )

[node name="HUD" parent="." instance=ExtResource( 4 )]
position = Vector2( 439.014, 49.317 )

[node name="tempo_espera" type="Timer" parent="."]

[node name="loop_espera" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="tempo_espera" to="." method="_on_tempo_espera_timeout"]
